<resources>
    <string name="app_name">gdgssu_fork</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="prompt_id">아이디</string>
    <string name="prompt_pw">비밀번호</string>
    <string name="prompt_confirm">비밀번호 확인</string>
    <string name="prompt_wait">잠시만 기다려주세요</string>

    <string name="action_submit">확인</string>
    <string name="action_more">추가</string>
    <string name="action_signup">회원가입</string>


    <string name="err_empty_id">아이디를 입력해주세요</string>
    <string name="err_empty_pw">비밀번호를 입력해주세요</string>
    <string name="err_empty_confirm">비밀번호 확인을 입력해주세요</string>
    <string name="err_empty_email">이메일을 입력해주세요</string>
    <string name="err_empty_name">이름을 입력해주세요</string>


    <string name="err_invalid_id">아이디는 6글자 이상이여야합니다.</string>
    <string name="err_invalid_pw">비밀번호는 6글자 이상이여야합니다.</string>
    <string name="err_invalid_confirm">비밀번호 확인은 비밀번호와 같아야합니다.</string>
    <string name="err_invalid_email">이메일 형식을 입력해주세요.</string>

    <string name="fail_to_sign_up">회원가입에 실패했습니다.</string>

    <string name="btn_start">시작</string>
    <string name="btn_stop">정지</string>
    <string name="btn_reset">초기화</string>

<<<<<<< HEAD
    <string name="prompt_ingredient">재료</string>
    <string name="prompt_ingredient_amount">재료의 양</string>
    <string name="prompt_time">시간</string>
    <string name="prompt_action">할 일</string>
    <string name="prompt_name">이름</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
=======
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
>>>>>>> dy-navigation-drawer

</resources>
