<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/activity_vertical_margin"
    tools:context="com.dayeong.gdgssu_fork.login.LoginFragment">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/fragment_login_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_id"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/fragment_login_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/prompt_pw"/>

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/fragment_login_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_submit"/>


    <Button
        android:id="@+id/fragment_login_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_signup"/>

</LinearLayout>
