<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fragment_insert_recipe_ingredient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_ingredient"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fragment_insert_recipe_ingredient_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_ingredient_amount"/>

        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:text="시간 "/>

            <NumberPicker
                android:id="@+id/fragment_insert_recipe_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text=":"/>

            <NumberPicker
                android:id="@+id/fragment_insert_recipe_sec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fragment_insert_recipe_action"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_action"
                android:minHeight="@dimen/action_min_height"
                android:gravity="top"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/fragment_insert_recipe_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_submit"/>


        <Button
            android:id="@+id/fragment_insert_recipe_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_more"/>

    </LinearLayout>


</LinearLayout>
